<resources>
    <string name="app_name">Are We There Yet dailingy</string>
    <string name="Provider">Provider:</string>
    <string name="Latitude">Latitude:</string>
    <string name="Longitude">Longitude:</string>
    <string name="dummy1">Dummy</string>
    <string name="dummy2">Dummy</string>
    <string name="dummy3">Dummy</string>
    <string name="dummy4">Dummy</string>
    <string name="dummy5">Dummy</string>
    <string name="newloc">New Location</string>
    <string name="New">New</string>
    <string name="eb2250">Engineering Building</string>
    <string name="sparty">Spartan</string>
    <string name="home">home</string>
    <string name="exception">Failed to communicate with geolocation services</string>
    <string name="couldnotfind">Unable to locate address</string>

</resources>
